--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -9,6 +9,9 @@
     Добро пожаловать в бот Anime Schedule! 🎉
     Просто отправьте мне ссылку на ваше любимое аниме, и я буду уведомлять вас о выходе новых серий.
 
+- id: "unsubscribe_button"
+  translation: "Отписаться"
+
 - id: "unsubscribe"
   translation: "Вы успешно отписались от обновлений по этому аниме. Если вы передумаете, всегда можете снова подписаться!"
 
@@ -22,7 +25,11 @@
   translation: "Вы уже следите за этим аниме! Оставайтесь на связи, и вы не пропустите ни одной новой серии. 😉"
 
 - id: "anime_saved"
-  translation: "Отлично, ваше аниме добавлено в список! 🥳 Вы будете получать уведомления, как только выйдут новые серии."
+  translation: | 
+    Отлично, теперь вы отслеживаете это аниме\!
+
+    *%s cерия* выйдет *%s*\.
+    Вы будете получать уведомления, как только выйдут новые серии\.
 
 - id: "new_series"
   translation: "У нас отличные новости! Только что вышла новая серия вашего любимого аниме. Погрузитесь в мир приключений! 🌟"
