fix website url

--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -5,7 +5,7 @@
 
 - id: "welcome"
   translation: |
-    Welcome to the Bot Anime Schedule!
+    Welcome to the Bot Anime Sentry!
     You need to send a link to the anime and I will notify you about the release of new anime
     Sites that are currently supported:
 
