--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -6,7 +6,7 @@
 
 - id: "welcome"
   translation: |
-    Добро пожаловать в бот Anime Schedule! 🎉
+    Добро пожаловать в бот Anime Sentry! 🎉
     Просто отправьте мне ссылку на ваше любимое аниме, и я буду уведомлять вас о выходе новых серий.
 
 - id: "unsubscribe_button"
